<resources>
    <string name="app_name">Battleship</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="start">Start</string>
    <string name="random">Random</string>
    <string name="time">Time</string>
    <string name="ships_left">Ships left</string>
    <string name="com_ships_left">COM Ships left</string>
    <string name="_000">000</string>
    <string name="clear">Clear</string>
    <string name="turn">turn</string>
    <string name="yourTurn">Your turn</string>
    <string name="comTurn">Computer turn</string>
    <string name="_00_00">00:00</string>
    <string name="who_win">Who win!</string>
    <string name="restart">Restart</string>
    <string name="main_screen">Main screen</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">settings</string>
    <string name="score_table">Score table</string>
</resources>
