<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="40dp"
    tools:context="com.example.ushtinfeld.battleship_uriel.Score">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/whoWin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/who_win"
        android:textSize="70dp" />
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/imageWhoWin"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/whoWin"
        android:layout_above="@+id/scoreButtons"
        android:layout_marginBottom="8dp"
        android:stretchColumns="*"></RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:outlineProvider="bounds"
        android:weightSum="1"
        android:soundEffectsEnabled="true"
        android:id="@+id/scoreButtons"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/Restart"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="#b195c0d3"
            android:backgroundTint="#ec517281"
            android:layout_marginRight="20dp"
            android:text="@string/restart"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/MainScreen"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginRight="16dp"
            android:background="#b195c0d3"
            android:backgroundTint="#ec517281"
            android:layout_marginLeft="20dp"
            android:text="@string/main_screen"
            android:textColor="@color/yellow"/>

    </LinearLayout>
</RelativeLayout>
